css/style.css
html {
    scroll-behavior: smooth;
    overflow: hidden; /* Removes the scrollbar, creating the single page look, regardless of if there is more below */
  }
body {
    /* background-color: #070A3B; */
    font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace, serif;
    color: #fff;
}

.bg-base {
    height: 100%;
    height: 100vh;
    background: linear-gradient(135deg,#5865F2, #6F6EF1, #8677EF, #8677EF);
    /* animation: xd 10s ease; */
    position: relative;
    overflow: hidden;
}

.bg-base-content {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100%;
    width: 100%;
    position: absolute;
    top: 0;
    left: 0;
    user-select: none;
}

.hero-body {
    position: relative;
  }
#tsparticles {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
  }

/* This CSS will apply when the viewport width is 1024 pixels or less */
@media (max-width: 1024px) {
    /* Custom CSS for box dropdown */
    .navbar-menu {
        display: none;
        position: absolute;
        right: 2rem;
        top: calc(100% + 0.5rem);
        z-index: 20;
        background-color: transparent;
        border: 1px solid rgba( 255, 255, 255, 0.18 );
        border-radius: 1rem;
        min-width: 200px;
        background: rgba( 255, 255, 255, 0.1 );
        box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
        backdrop-filter: blur( 2px );
        -webkit-backdrop-filter: blur( 2px );
      }
}

nav,
.navbar-menu {
  background-color: transparent !important;
  background: rgba( 255, 255, 255, 0.1 );
        box-shadow: 0 4px 32px 0 rgba( 31, 38, 135, 0.37 );
        backdrop-filter: blur( 2px );
        -webkit-backdrop-filter: blur( 2px );
}

.navbar-item {
    border-radius: .55rem; /* Add border radius to navbar items */
}
.navbar-item::after {
    content: ''; /* Add content to the pseudo-element */
    position: absolute; /* Set position absolute */
    bottom: 0;
    left: 0;
    width : 100%;
    height : 2px;
    background-color: #454aa6; /* Set color of the line */
    transform : scaleX(0);
    transform-origin: bottom right;
    transition: transform 0.3s ease; /* Add transition effect */
}
.navbar-item:hover::after {
    transform-origin: bottom left;
    transform: scaleX(1);
}
.navbar-item:hover {
    background-color: transparent; /* Change background color of navbar items on hover */
    color: white;
}
.navbar-burger {
    margin-right: 0.75rem;
    color: white
}
.navbar-item.has-dropdown.is-active .navbar-menu {
    display: block;
}
.navbar-item.has-dropdown.is-active .navbar-link {
    background-color: transparent; /* Remove background color from active dropdown */
}
.navbar-dropdown {
    border: none; /* Remove border from dropdown items */
    padding: 0.5rem; /* Add padding */
}
.navbar-item.has-dropdown.is-active .navbar-dropdown {
    display: block; /* Show dropdown on active */
}

.lead {
    text-align: center;
 }

 .lead > a {
   margin-bottom: 0.5em;
 }

.box-img {
    border-top-left-radius: 0; /* Keep top-left corner square */
    border-top-right-radius: 0; /* Keep top-right corner square */
    border-bottom-left-radius: 50%; /* Bottom-left corner becomes circular */
    border-bottom-right-radius: 50%; /* Bottom-right corner becomes circular */
    width: 10rem;
    height: 10rem;
    margin-bottom: 1rem;
    overflow: hidden; /* Hide the overflowing content */
}

@keyframes xd {
    from {
        opacity: 0;
    }

    to {
        opacity: 1;
    }
}


/*
    https://coolors.co/5865f2-5e68f2-646af2-6f6ef1-8677ef-b388eb-ea80fc
*/
/* Original Theme */
/*
background: linear-gradient(135deg, #0c007d, #552bb9, #9d55f5);
*/
/* Ocean Breeze */
/*
background: linear-gradient(135deg, #82D8D8, #65C8C8, #49B7B7, #2CA5A5, #198E8E, #008080);
*/
/* Midnight Blue */
/*
background: linear-gradient(135deg, #090E42, #080C3F, #070A3B, #060838, #050635, #040432);
*/
/* Light theme */
/*
background: linear-gradient(135deg, #5865F2, #5E68F2, #646AF2, #6F6EF1, #8677EF, #8677EF, #EA80FC);
*/
/* Dark theme */
/*
background: linear-gradient(135deg, #000033, #330066, #660099, #9900CC, #CC00FF, #FF33FF);
*/

::-webkit-scrollbar {
	width: 5px;
	color: #ffffff;
}

::-webkit-scrollbar-track {
	background: #212529;
}

::-webkit-scrollbar-thumb {
	background: #5865F2;
	border-radius: 30px;
}

::-webkit-scrollbar-thumb:hover {
	background: #5865F2;
}

::placeholder {
	/* Chrome, Firefox, Opera, Safari 10.1+ */
	color: rgb(219, 219, 219);
	opacity: 1; /* Firefox */
}

:-ms-input-placeholder {
	/* Internet Explorer 10-11 */
	color: rgb(219, 219, 219);
}

::-ms-input-placeholder {
	/* Microsoft Edge */
	color: rgb(219, 219, 219);
}

